<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="pref_doforceclose_title">Kill music app</string>
    <string name="pref_doforceclose_off">The app will not be force closed.</string>
    <string name="pref_doforceclose_on">The app will be forced to closed if possible.</string>
    <string name="pref_widget_setminutes_off">Minutes dialog is NOT shown when clickin on widget.</string>
    <string name="pref_widget_setminutes_on">Minutes dialog is shown when clickin on widget.</string>
    <string name="pref_widget_setminutes">Set minutes everytime</string>
    <string name="pref_widget_startplayer_off">Music player will NOT be started</string>
    <string name="pref_widget_startplayer_on">Music player will be started</string>
    <string name="pref_widget_startplayer">Start Music Player</string>
    <string name="pref_category_widget">Widget</string>
    <string name="menu_unlock">Unlock</string>
    <string name="pref_broadcast_stop_title">Send Stop Broadcast</string>
    <string name="pref_broadcast_stop_off">A media stop broadcast will NOT be sent.</string>
    <string name="pref_broadcast_stop_on">A media stop broadcast will be sent.</string>
    <string name="pref_broadcast_pause_title">Send Pause Broadcast</string>
    <string name="pref_broadcast_pause_off">A media pause broadcast will NOT be sent.</string>
    <string name="pref_broadcast_pause_on">A media pause broadcast will be sent. Might start other players.</string>
    <string name="pref_category_shakeextend">Shake Extend</string>
    <string name="pref_airplane_summary">If set, SleepTimer will turn on airplane mode.</string>
    <string name="pref_airplane">Turn on airplane mode</string>
    <string name="pref_bluetooth_summary">If set, SleepTimer will turn off bluetooth.</string>
    <string name="pref_bluetooth">Turn off bluetooth</string>
    <string name="pref_shakeextend_minutes_comment">Minutes the music should continue after shaking.</string>
    <string name="pref_shakeextend_minutes">Shake extend minutes</string>
    <string name="pref_shakeextend_comment">After a signal you can extend the SleepTimer by shaking.</string>
    <string name="pref_shakeextend">Shake extend</string>
    <string name="pref_mute_notifications_summary">Turn the volume for notifications off.</string>
    <string name="pref_mute_notifications">Mute notifications</string>
    <string name="pref_category_general">General</string>
    <string name="pref_category_after_countdown">After countdown</string>
    <string name="button_start_player">Launch %s</string>
    <string name="menu_settings">Settings</string>
    <string name="pref_ownservice_summary">Choose another not supported application to be stopped by SleepTimer. (works only before Froyo or rooted)</string>
    <string name="pref_ownservice">Other application to stop</string>
    <string name="pref_music_app_summary">Choose your music application which should be started with the launch button.</string>
    <string name="pref_music_app">Set Launch Button</string>
    <string name="pref_stop_wifi_summary">If set, SleepTimer will turn off WiFi.</string>
    <string name="pref_stop_wifi">Turn off WiFi</string>
    <string name="pref_music_player_not_set">Music player has not been set in preferences.</string>
    <string name="dialog_btn_set">Save</string>
    <string name="dialog_set_minutes">Set minutes</string>
    <string name="dialog_feedback_send_button">Send feedback through e-mail</string>
    <string name="dialog_feedback_include_services">Include list of running services</string>
    <string name="dialog_feedback_title">Feedback</string>
    <string name="dialog_feedback_player_name">Name of your player: </string>
    <string name="dialog_loadapps_standby">Loading applications. This might take a while...</string>
    <string name="dialog_loadservices_standby">Loading running services. This might take a while...</string>
    <string name="menu_quit">Quit</string>
    <string name="menu_donate">Donate</string>
    <string name="menu_changelog">ChangeLog</string>
    <string name="app_name">SleepTimer</string>
	<string name="minutes_prompt">Set the minutes</string>
	<string name="text_minutes">Minutes until your music slowly fades out. After fading your player will be stopped.</string>
	<string name="menu_feedback">Bugs/Request</string>
	<string name="notify_started">SleepTimer started...</string>
	<string name="notify_minutes_left">minutes left</string>
	<string name="notify_minutes_left_until_sleep">minutes left until Sleep.</string>
	<string name="notify_going_to_sleep_in">Going to sleep in %s minutes.</string>
	<string name="notify_goingtosleep">going to sleep...</string>
	<string name="notify_goingtosleep2">We are now going to sleep.</string>
	<string name="notify_pref_chosen">%s has been chosen.</string>
	<string name="layout_text">Doze off peacefully with SleepTimer.</string>
	<string name="button_start_sleeptimer"> Start SleepTimer</string>
	<string name="button_stop_sleeptimer">Stop SleepTimer</string>
	<string name="dialog_feedback">When clicking on the button below it will open your e-mail application where you can enter the feedback/request/bug report.</string>
	<string name="dialog_feedback2">If you want a new player to be supported please let your player run music and then send this feedback including the running services. Please mention the name of your player in the feedback.</string>
	<string name="own_service_empty">[DO NOT SET]</string>
	<string name="x_minutes">%s min</string>
	<string name="pref_music_player">Music Player</string>
	<string name="pref_app_to_stop">Application to stop</string>
	<string name="error_cannot_start_app">Could not start the application. Automatic bug report has been sent.</string>
	<string name="button_ok">Ok</string>
	<string name="message_froyo_and_higher_title">Froyo (2.2) Root</string>
	<string name="message_froyo_checkroot">Checking if rooted phone. If a message box comes, grant root.</string>
	<string name="message_froyo_root">Your phone has root (looks like it). All music applications and as well own set application should be able to be stopped. After this message please grant root access to SleepTimer. And mark "always grant access" so that SleepTimer will be able to stop the Music Application at the certain time without you having to confirm it. If your phone does not have root, only a few applicatoins will be stopped.</string>
	<string name="message_froyo_noroot">Your phone has no root access. Some applications supporting the Media Pause Button will be stopped. Others will not. If Google will allow me to kill other Applications again in future Versions, this will be possible again. But for now it is impossible.</string>
	<string name="message_froyo_toast_noroot">Your Android phone has no root.</string>
	

	<string name="text_notyetpaid">SleepTimer is not totally unlocked, because you have not yet paid for the app. If you would like to do so, you need to do one of the following.</string>
	<string name="text_getpaidapp">Buy SleepTimer Paid to unlock</string>
	<string name="text_paidfeatures">Features of unlocked Version</string>
	<string name="text_paidfeature1">- no Ads</string>
	<string name="text_paidfeature2">- Widget</string>
	
	<string name="text_getpaidapp_step1">1. Buy SleepTimer Paid in the Android Market</string>
	<string name="text_getpaidapp_step2">2. Run SleepTimer (this app here)</string>
	<string name="text_getpaidapp_step3">3. Click &quot;Unlock&quot; in the menu</string><string name="text_paypaypal">Pay through SleepTimer PayPal app</string>
	<string name="text_paypaypal_step1">1. Download &quot;SleepTimer PayPal&quot; from Android Market</string>
	<string name="text_paypaypal_step2">2. Run &quot;SleepTimer PayPal&quot; that you just installed</string>
	<string name="text_paypaypal_step3">3. Pay through paypal</string>
	<string name="text_paypaypal_step4">4. Run SleepTimer (this app here)</string>
	<string name="text_paypaypal_step5">5. Click on &quot;Unlock&quot; in the menu</string>
	<string name="text_donate">Donate</string>
	<string name="text_donate_step1">1. Donate 1$ or more</string>
	<string name="text_donate_step2">2. Wait for email from Patrick Boos</string>
	<string name="text_donate_step3">3. Do as instructed in the email</string>
</resources>
