<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="wrap_content"
  android:layout_height="wrap_content">
<ScrollView android:id="@+id/ScrollView01" android:layout_width="wrap_content" android:layout_height="wrap_content"><LinearLayout android:id="@+id/LinearLayout01" android:layout_width="wrap_content" android:layout_height="wrap_content" android:orientation="vertical"><TextView android:id="@+id/TextView01" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/dialog_feedback"></TextView><TextView android:id="@+id/TextView02" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/dialog_feedback2"></TextView><CheckBox android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/dialog_feedback_include_services" android:id="@+id/CheckBox_services"></CheckBox><Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/dialog_feedback_send_button" android:id="@+id/Button_send"></Button>


</LinearLayout></ScrollView>



</LinearLayout>
