<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:admobsdk="http://schemas.android.com/apk/res/ch.pboos.android.SleepTimer"
	android:id="@+id/LayoutTop" android:layout_height="fill_parent"
	android:layout_width="fill_parent" android:orientation="vertical">
	<ScrollView android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:layout_weight="1">
		<RelativeLayout android:orientation="vertical"
			android:layout_width="fill_parent" android:layout_height="fill_parent"
			android:layout_gravity="center_vertical">
			<LinearLayout android:orientation="vertical"
				android:layout_width="fill_parent" android:layout_height="fill_parent"
				android:layout_gravity="center_vertical">
				<ImageView android:id="@+id/image_title"
					android:layout_width="wrap_content" android:layout_height="fill_parent"
					android:background="@drawable/title" android:layout_gravity="center_horizontal|center"></ImageView>


				<TextView android:id="@+id/TextView01"
					android:layout_height="wrap_content" android:textSize="18sp"
					android:layout_width="wrap_content" android:text="@string/layout_text"
					android:layout_gravity="center_horizontal|center"
					android:layout_marginTop="20px"></TextView>

				<LinearLayout android:id="@+id/LinearLayout02"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:orientation="horizontal" android:gravity="center_vertical"
					android:layout_gravity="center_horizontal|center"
					android:layout_marginTop="20px">
					<Button android:layout_width="wrap_content"
						android:layout_height="wrap_content" android:id="@+id/ButtonTime"
						android:text="-min-" android:textStyle="bold" android:textSize="16sp"
						android:minWidth="90sp"></Button>
					<Button android:layout_width="wrap_content"
						android:layout_height="wrap_content" android:id="@+id/ButtonStart"
						android:text="@string/button_start_sleeptimer"
						android:layout_marginLeft="20sp" android:drawableLeft="@android:drawable/ic_media_play"></Button>
				</LinearLayout>

				<LinearLayout android:id="@+id/LinearLayout03"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:orientation="vertical" android:layout_gravity="center_horizontal|center"
					android:layout_marginTop="20px">
					<Button android:layout_width="wrap_content"
						android:layout_height="wrap_content" android:id="@+id/Button_StartPlayer"
						android:text="@string/button_start_player" android:drawableTop="@android:drawable/ic_lock_silent_mode_off"></Button>
				</LinearLayout>
			</LinearLayout>
		</RelativeLayout>
	</ScrollView>
</LinearLayout>